# SDLRT

./: .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  README_dependencies.md  README_docker.md
.devcontainer/: devcontainer.json
.github/: constants.env
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/SDLRT/: CApp.hpp  FPSCounter.hpp  headers.hpp  headersSDL.hpp  sample_library.hpp
include/SDLRT/rayTracing/: Camera.hpp  GTform.hpp  LightBase.hpp  ObjPlane.hpp  ObjSphere.hpp  ObjectBase.hpp  PointLight.hpp  Ray.hpp  Scene.hpp  qbImage.hpp
include/SDLRT/rayTracing/light/: LightBase.hpp
include/SDLRT/rayTracing/materials/: MaterialBase.hpp  SimpleMaterial.hpp  SimpleRefractive.hpp
include/SDLRT/rayTracing/primitives/: Cone.hpp  Cylinder.hpp  ObjPlane.hpp  ObjSphere.hpp  ObjectBase.hpp
include/SDLRT/rayTracing/textures/: Checker.hpp  Flat.hpp  Image.hpp  TextureBase.hpp
include/SDLRT/timer/: TimeStep.hpp  Timer.hpp  Times.hpp  timeFactors.hpp
src/: CMakeLists.txt
src/Core/: CApp.cpp  CMakeLists.txt  FPSCounter.cpp  sample_library.cpp
src/Core/rayTracing/: Camera.cpp  GTform.cpp  LightBase.cpp  ObjPlane.cpp  ObjSphere.cpp  ObjectBase.cpp  PointLight.cpp  Ray.cpp  Scene.cpp  qbImage.cpp
src/Core/rayTracing/light/: LightBase.cpp  PointLight.cpp
src/Core/rayTracing/materials/: MaterialBase.cpp  SimpleMaterial.cpp  SimpleRefractive.cpp
src/Core/rayTracing/primitives/: Cone.cpp  Cylinder.cpp  ObjPlane.cpp  ObjSphere.cpp  ObjectBase.cpp
src/Core/rayTracing/textures/: Checker.cpp  Flat.cpp  Image.cpp  TextureBase.cpp
src/engine/: CMakeLists.txt  main.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
